2009-05-06 wuertz

        * shrink from tawny added als builtin

pkg/fAssets/R/builtin-shrinkTawny.R

2009-04-29 wuertz

        * comment added

pkg/fAssets/R/assetsMeanCov.R

2009-04-19 chalabi

        * added explicit version number in Depends field for key packages

pkg/fAssets/DESCRIPTION

2009-04-08 ellis

        * added function to compute color space for correlation matrix plot

pkg/fAssets/R/plot-pairs.R

2009-03-13 wuertz

        * small fix done

pkg/fAssets/R/assetsTest.R

2009-02-08 wuertz

        * package reorganized, script files

pkg/fAssets/R/builtin-corrgram.R
pkg/fAssets/R/buitin-corrgram.R

2009-02-08 wuertz

        * script files reorganized

pkg/fAssets/R/assetsArrange.R
pkg/fAssets/R/assetsFit.R
pkg/fAssets/R/assetsLPM.R
pkg/fAssets/R/assetsMeanCov.R
pkg/fAssets/R/assetsOutliers.R
pkg/fAssets/R/assetsPfolio.R
pkg/fAssets/R/assetsSelect.R
pkg/fAssets/R/assetsSim.R
pkg/fAssets/R/assetsStats.R
pkg/fAssets/R/assetsTest.R
pkg/fAssets/R/panel-diagonal.R
pkg/fAssets/R/plot-panels.R
pkg/fAssets/R/plot-qqplot.R
pkg/fAssets/R/zzz.Deprecated.R

2009-02-08 wuertz

        * script files freorganisation

pkg/fAssets/R/assetsFit.R
pkg/fAssets/R/assetsPfolio.R
pkg/fAssets/R/assetsRisk.R
pkg/fAssets/R/class-fASSETS.R
pkg/fAssets/R/plot-binning.R
pkg/fAssets/R/plot-boxplot.R
pkg/fAssets/R/plot-ellipses.R
pkg/fAssets/R/plot-hist.R
pkg/fAssets/R/plot-mst.R
pkg/fAssets/R/plot-pairs.R
pkg/fAssets/R/plot-panels.R
pkg/fAssets/R/plotPanels.R

2009-01-02 wuertz

        * stars plot, plot argument corrected

pkg/fAssets/R/plot-stars.R